--- a/p8105_hw1_ym2770.md
+++ b/p8105_hw1_ym2770.md
@@ -36,39 +36,10 @@ prob1_df =
 Take the mean of each variable in my data frame.
 
 ``` r
-as.numeric(pull(prob1_df, samp))
-```
-
-    ##  [1]  0.01539140 -0.68472872  0.30083808 -1.32717499  1.19774758  0.88957141
-    ##  [7] -0.07134781  0.11850895 -0.64752304  0.91785608
-
-``` r
-as.numeric(pull(prob1_df, samp_gt_0))
-```
-
-    ##  [1] 1 0 1 0 1 1 0 1 0 1
-
-``` r
-as.numeric(pull(prob1_df, char_vec))
-```
-
-    ## Warning: NAs introduced by coercion
-
-    ##  [1] NA NA NA NA NA NA NA NA NA NA
-
-``` r
-as.numeric(pull(prob1_df, factor_vec))
-```
-
-    ##  [1] 2 2 2 3 3 3 3 1 1 1
-
-I can take the means of numbers and logical but not character or factor.
-
-``` r
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.07091389
+    ## [1] 0.5270723
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
@@ -93,5 +64,63 @@ mean(pull(prob1_df, factor_vec))
     ## logical: returning NA
 
     ## [1] NA
+
+I can take the means of numbers and logical but not character or factor.
+
+``` r
+as.numeric(pull(prob1_df, samp))
+```
+
+    ##  [1]  0.43195060 -0.02642723  1.78288472 -1.25658853  1.65992522  2.16168340
+    ##  [7]  1.37035032 -0.76867130 -0.58979045  0.50540589
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0))
+```
+
+    ##  [1] 1 0 1 0 1 1 1 0 0 1
+
+``` r
+as.numeric(pull(prob1_df, char_vec))
+```
+
+    ## Warning: NAs introduced by coercion
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(pull(prob1_df, factor_vec))
+```
+
+    ##  [1] 2 2 2 3 3 3 3 1 1 1
+
+The logic vector is converted to numeric 0 and 1, the character vector
+is converted to NA for all elements, and the factor vector is converted
+to numeric. It helps explain that R regards true as 1 and false as 0
+automatically. And it shows that a factor vector can be converted to
+numeric, but a character vector cannot.
+
+``` r
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ##  [1] 0.4319506 0.0000000 1.7828847 0.0000000 1.6599252 2.1616834 1.3703503
+    ##  [8] 0.0000000 0.0000000 0.5054059
+
+``` r
+as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ## Warning in Ops.factor(as.factor(pull(prob1_df, samp_gt_0)), pull(prob1_df, : '*'
+    ## not meaningful for factors
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
+```
+
+    ##  [1]  0.86390120 -0.02642723  3.56576943 -1.25658853  3.31985044  4.32336681
+    ##  [7]  2.74070064 -0.76867130 -0.58979045  1.01081178
 
 ## Problem 2
