work of problem 2

--- a/p8105_hw1_ym2770.Rmd
+++ b/p8105_hw1_ym2770.Rmd
@@ -12,7 +12,7 @@ library(tidyverse)
 
 ## Problem 1
 
-Creates a data frame with the specified elements.
+Create a data frame with the specified elements.
 
 ```{r}
 prob1_df = 
@@ -52,7 +52,22 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-
-
 ## Problem 2
+
+```{r}
+data("penguins", package = "palmerpenguins")
+
+summary(penguins)
+```
+
+This dataset includes data of location and physical physical features of 3 species of penguins. Important variables include species, island where the penguin is from, bill length and depth in mm, flipper length in mm, body mass in gram, sex, and year. 3 penguins species include Adelie, Chinstrap and Gentoo. 3 islands that these penguins are from include Biscoe, Dream, and Torgersen.
+This dataset has `r nrow(penguins)` rows and `r ncol(penguins)` columns.
+The mean flipper length of those penguins is `r mean(pull(penguins,flipper_length_mm),na.rm=TRUE)` mm.
+
+```{r}
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+ggsave("scatter_plot.pdf",height=4,width=4)
+```
+
+
 
