--- a/p8105_hw1_ym2770.md
+++ b/p8105_hw1_ym2770.md
@@ -21,7 +21,7 @@ library(tidyverse)
 
 ## Problem 1
 
-Creates a data frame with the specified elements.
+Create a data frame with the specified elements.
 
 ``` r
 prob1_df = 
@@ -39,13 +39,13 @@ Take the mean of each variable in my data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.5270723
+    ## [1] 0.03988733
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.4
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -71,14 +71,14 @@ I can take the means of numbers and logical but not character or factor.
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1]  0.43195060 -0.02642723  1.78288472 -1.25658853  1.65992522  2.16168340
-    ##  [7]  1.37035032 -0.76867130 -0.58979045  0.50540589
+    ##  [1]  1.1081957 -0.4529935  0.1490586  2.2314010  0.9782996 -0.7048963
+    ##  [7] -0.4949035 -0.4123097 -1.7744650 -0.2285137
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 1 0 1 0 1 1 1 0 0 1
+    ##  [1] 1 0 1 1 1 0 0 0 0 0
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -104,8 +104,8 @@ numeric, but a character vector cannot.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.4319506 0.0000000 1.7828847 0.0000000 1.6599252 2.1616834 1.3703503
-    ##  [8] 0.0000000 0.0000000 0.5054059
+    ##  [1] 1.1081957 0.0000000 0.1490586 2.2314010 0.9782996 0.0000000 0.0000000
+    ##  [8] 0.0000000 0.0000000 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -120,7 +120,52 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  0.86390120 -0.02642723  3.56576943 -1.25658853  3.31985044  4.32336681
-    ##  [7]  2.74070064 -0.76867130 -0.58979045  1.01081178
+    ##  [1]  2.2163915 -0.4529935  0.2981171  4.4628021  1.9565992 -0.7048963
+    ##  [7] -0.4949035 -0.4123097 -1.7744650 -0.2285137
 
 ## Problem 2
+
+``` r
+data("penguins", package = "palmerpenguins")
+
+summary(penguins)
+```
+
+    ##       species          island    bill_length_mm  bill_depth_mm  
+    ##  Adelie   :152   Biscoe   :168   Min.   :32.10   Min.   :13.10  
+    ##  Chinstrap: 68   Dream    :124   1st Qu.:39.23   1st Qu.:15.60  
+    ##  Gentoo   :124   Torgersen: 52   Median :44.45   Median :17.30  
+    ##                                  Mean   :43.92   Mean   :17.15  
+    ##                                  3rd Qu.:48.50   3rd Qu.:18.70  
+    ##                                  Max.   :59.60   Max.   :21.50  
+    ##                                  NA's   :2       NA's   :2      
+    ##  flipper_length_mm  body_mass_g       sex           year     
+    ##  Min.   :172.0     Min.   :2700   female:165   Min.   :2007  
+    ##  1st Qu.:190.0     1st Qu.:3550   male  :168   1st Qu.:2007  
+    ##  Median :197.0     Median :4050   NA's  : 11   Median :2008  
+    ##  Mean   :200.9     Mean   :4202                Mean   :2008  
+    ##  3rd Qu.:213.0     3rd Qu.:4750                3rd Qu.:2009  
+    ##  Max.   :231.0     Max.   :6300                Max.   :2009  
+    ##  NA's   :2         NA's   :2
+
+This dataset includes data of location and physical physical features of
+3 species of penguins. Important variables include species, island where
+the penguin is from, bill length and depth in mm, flipper length in mm,
+body mass in gram, sex, and year. 3 penguins species include Adelie,
+Chinstrap and Gentoo. 3 islands that these penguins are from include
+Biscoe, Dream, and Torgersen. This dataset has 344 rows and 8 columns.
+The mean flipper length of those penguins is 200.9152047 mm.
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_ym2770_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+
+``` r
+ggsave("scatter_plot.pdf",height=4,width=4)
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
