--- a/p8105_hw1_ym2770.md
+++ b/p8105_hw1_ym2770.md
@@ -39,7 +39,7 @@ Take the mean of each variable in my data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.03988733
+    ## [1] -0.09510458
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
@@ -71,14 +71,14 @@ I can take the means of numbers and logical but not character or factor.
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1]  1.1081957 -0.4529935  0.1490586  2.2314010  0.9782996 -0.7048963
-    ##  [7] -0.4949035 -0.4123097 -1.7744650 -0.2285137
+    ##  [1] -2.07770096 -0.08109448  1.14009241 -0.04373593  0.87293995 -0.64717116
+    ##  [7] -1.39789288 -0.09432473  0.71896536  0.65887667
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 1 0 1 1 1 0 0 0 0 0
+    ##  [1] 0 0 1 0 1 0 0 0 1 1
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -104,8 +104,8 @@ numeric, but a character vector cannot.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 1.1081957 0.0000000 0.1490586 2.2314010 0.9782996 0.0000000 0.0000000
-    ##  [8] 0.0000000 0.0000000 0.0000000
+    ##  [1] 0.0000000 0.0000000 1.1400924 0.0000000 0.8729399 0.0000000 0.0000000
+    ##  [8] 0.0000000 0.7189654 0.6588767
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -120,8 +120,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  2.2163915 -0.4529935  0.2981171  4.4628021  1.9565992 -0.7048963
-    ##  [7] -0.4949035 -0.4123097 -1.7744650 -0.2285137
+    ##  [1] -2.07770096 -0.08109448  2.28018482 -0.04373593  1.74587990 -0.64717116
+    ##  [7] -1.39789288 -0.09432473  1.43793073  1.31775333
 
 ## Problem 2
 
@@ -151,9 +151,12 @@ summary(penguins)
 This dataset includes data of location and physical physical features of
 3 species of penguins. Important variables include species, island where
 the penguin is from, bill length and depth in mm, flipper length in mm,
-body mass in gram, sex, and year. 3 penguins species include Adelie,
-Chinstrap and Gentoo. 3 islands that these penguins are from include
-Biscoe, Dream, and Torgersen. This dataset has 344 rows and 8 columns.
+body mass in gram, sex, and year. Three penguins species include Adelie,
+Chinstrap and Gentoo. Three islands that these penguins are from include
+Biscoe, Dream, and Torgersen.
+
+This dataset has 344 rows and 8 columns.
+
 The mean flipper length of those penguins is 200.9152047 mm.
 
 ``` r
