--- a/p8105_hw1_ym2770.md
+++ b/p8105_hw1_ym2770.md
@@ -39,7 +39,7 @@ Take the mean of each variable in my data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.09510458
+    ## [1] -0.1146705
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
@@ -71,14 +71,14 @@ I can take the means of numbers and logical but not character or factor.
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1] -2.07770096 -0.08109448  1.14009241 -0.04373593  0.87293995 -0.64717116
-    ##  [7] -1.39789288 -0.09432473  0.71896536  0.65887667
+    ##  [1]  1.104361146 -0.708299411 -0.778511528 -0.203594428  0.337636719
+    ##  [6]  0.091973415  0.731390686 -0.486605942 -0.006264722 -1.228791351
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 0 0 1 0 1 0 0 0 1 1
+    ##  [1] 1 0 0 0 1 1 1 0 0 0
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -104,8 +104,8 @@ numeric, but a character vector cannot.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.0000000 0.0000000 1.1400924 0.0000000 0.8729399 0.0000000 0.0000000
-    ##  [8] 0.0000000 0.7189654 0.6588767
+    ##  [1] 1.10436115 0.00000000 0.00000000 0.00000000 0.33763672 0.09197342
+    ##  [7] 0.73139069 0.00000000 0.00000000 0.00000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -120,8 +120,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1] -2.07770096 -0.08109448  2.28018482 -0.04373593  1.74587990 -0.64717116
-    ##  [7] -1.39789288 -0.09432473  1.43793073  1.31775333
+    ##  [1]  2.208722292 -0.708299411 -0.778511528 -0.203594428  0.675273439
+    ##  [6]  0.183946830  1.462781372 -0.486605942 -0.006264722 -1.228791351
 
 ## Problem 2
 
@@ -148,12 +148,14 @@ summary(penguins)
     ##  Max.   :231.0     Max.   :6300                Max.   :2009  
     ##  NA's   :2         NA's   :2
 
-This dataset includes data of location and physical physical features of
-3 species of penguins. Important variables include species, island where
+This dataset includes data of location and physical features of 3
+species of penguins. Important variables include species, island where
 the penguin is from, bill length and depth in mm, flipper length in mm,
 body mass in gram, sex, and year. Three penguins species include Adelie,
 Chinstrap and Gentoo. Three islands that these penguins are from include
-Biscoe, Dream, and Torgersen.
+Biscoe, Dream, and Torgersen.Bill length ranges from 32.10 to 59.60 mm,
+bill depth from 13.10 to 21.50 mm, flipper length from 172.0 to 231.0
+mm, and body mass from 2700 to 6300 grams.
 
 This dataset has 344 rows and 8 columns.
 
